<resources>
    <string name="app_name">Custom Chat</string>
    <string name="new_chat">New Chat</string>
    <string name="start_chatting_now">Start chatting now!</string>
    <string name="message">Message</string>
    <string name="last_name">Last name</string>
    <string name="phonenumber">Phone number</string>
    <string name="first_name">First name</string>
    <string name="new_contact">New contact</string>
    <string name="add">Add</string>
    <string name="contact_info">Contact info</string>
    <string name="save">Save</string>
    <string name="phone">Phone:</string>
    <string name="_0100234332">0100234332</string>
</resources>